# MEPHI_SF_SQL_Final_Project

./: .env.example  GNA_Project_SQL.ipynb  README.md  pyproject.toml
