[project]
name = "mephi-sf-sql-final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "jupyter>=1.1.1",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "psycopg2>=2.9.11",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
]
